chore: convert px to em for media queries

--- a/users-list/style.css
+++ b/users-list/style.css
@@ -181,7 +181,7 @@ img {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 48em) {
   .userList__body {
     grid-template-columns: 1fr;
   }
